# django-sphinx-view

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/source/: conf.py  index.rst
sphinx_view/: __init__.py  builders.py  views.py
sphinx_view/templates/sphinx_view/: page.html
